<resources>
    <string name="app_name">Restora</string>
    <string name="tavsiye_metin">Bilim dünyasında büyük yankı uyandıran yeni bir araştırma sonrası, insanların sağlıksız sonuçlardan korkmadan, kırmızı et yemeye devam edebileceğini öne süren haberler yapıldı. Peki bu bulguları nasıl yorumlamalıyız?  Şimdiye kadar çok sayıda çalışma, işlenmiş veya işlenmemiş kırmızı eti tüketmenin, yüksek bir kanser riski, kardiyovasküler problemler ve erken ölüm ile ilişkili olduğunu ortaya koymuştur.  Bu ve benzeri kanıtlara dayanarak, bireylerin kırmızı et alımlarını mümkün olduğunca azaltmalarını öneren sağlık rehberleri yayınlandı.  Bununla birlikte 1 Ekim 2019\'da tıbbın önde gelen bilimsel dergilerinden biri olan Annals of Internal Medicine\'da, dünya çapında manşetlere giren bir makale yayımlandı; bulgular kırmızı etin sağlık üzerinde önceden düşünüldüğü kadar zararlı bir etkiye sahip olmayacağını öne sürüyor.  Beslenme önerileri konsorsiyomu (NutriRECS ) araştırmacıları, kırmızı et tüketimi ile olumsuz sağlık sonuçları arasındaki mevcut kanıtları çeşitli nedenlerle yeniden değerlendirmeye ihtiyaç duyduklarını açıkladılar.  Yapılan 12 randomize kontrollü çalışmada haftalık yedi porsiyondan üçe düşen et tüketimindeki azalmanın kanser, diyabet veya kalp hastalığı riskini azaltmada istatistiksel olarak anlamlı bir ilişki olmadığı sonucuna vardılar.  Bu çalışma NutriRECS kılavuzunda genel mortalite, kalp sağlığı ve kanser dahil olmak üzere çeşitli veri kaynaklarını ve sağlık sonuçlarını dikkate alan dört sistematik incelemeye dayanmaktadır.  Amerikan Kanser Derneği (ACS) sözcüsü bu durumu, riskin kanıtlanmasına rağmen kasksız şekilde bisiklet sürmenin güvenli olduğunun söylenmesine benzetti.  14 üyeli uluslararası konsorsiyum tarafından geliştirilen diyet rehberine göre çoğu yetişkinin işlenmiş ve işlenmemiş kırmızı et tüketmesi, uzun vadede çok az sağlık riski yaratıyor. Sonuç, sadece haftada bir kırmızı ve işlenmiş et porsiyonu öneren ABD’nin belirlediği kurallara aykırı.  Halifax Dalhousie Üniversitesi\'nde epidemiyoloji ve toplum sağlığı profesörü Bradley C. Johnston, \"Bunların temelinde, çoğu insanın kırmızı et veya işlenmiş et tüketimini azaltmaları gerekmediği konusunda zayıf bir öneride bulunduk, kırmızı et veya işlenmiş et yemenin kansere, diyabete veya kalp hastalığına yol açtığını kesin olarak söyleyemeyiz\" dedi.  Yazarlar kırmızı etin sağlık üzerinde herhangi bir düzeyde etkiye sahip olup olmadığı belli değilse, 18 yaş ve üstü kırmızı et yiyen yetişkinlerin kırmızı et yemeyi seviyorlarsa, vazgeçmeleri konusunda ısrar etmenin çok az bir getirisi olduğu sonucuna vardılar.  Sonuç olarak bu çalışma, \"yoğun\" kırmızı et veya işlenmiş et tüketmeyi tamamen aklamamaktadır, bununla birlikte kırmızı et tüketmenin sigara veya alkol kadar net zararlı olmadığı da açıktır.</string>
    <string name="tavsiye_snackbar">Kırmızı et tüketmeyi aklayan bir araştırma dünya sağlık haberlerinin gündeminde</string>
    <string name="tavsiye_baslik">Tavsiye</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_sefin_spesyali_tabbed">SefinSpesyaliTabbed</string>
    <string name="tab_text_1">Şefin Spesyali 1</string>
    <string name="tab_text_2">Şefin Spesyali 2</string>
    <string name="tab_text_3">Şefin Spesyali 3</string>
    <string name="Service_Title">Restora</string>
    <string name="Service_Welcome_Message">Hoş geldiniz</string>
    <string name="Service_Starting_Message">service starting</string>
    <string name="Service_Done_Message">service done</string>
    <string name="MainActivity_Invite_Message">Hey selam, Resto\'da akşam yemeğine ne dersin?</string>
    <string name="MainActivity_Invite_Where">\"Davet nereden gönderilsin: \"</string>
    <string name="Hakkimizda_Share_Body">Harika bir restoran, kesinlikle tavsiye ederim!</string>
    <string name="Hakkimizda_Share_Subject">Bunu denemelisiniz!</string>
    <string name="Hakkimizda_Share_With">\"Şurada paylaş: \"</string>
    <string name="Rezervasyon_Cancel">Değişiklik iptal edildi!</string>
    <string name="Tavsiye_Close">kapat</string>
    <string name="Hakkimizda_Contact_Address">İletişim Bilgilerimiz ve Adresimiz</string>
    <string name="MainActivity_Invite">Yemek Daveti</string>
    <string name="MainActivity_Rezervasyon">Rezervasyon</string>
    <string name="MainActivity_Hakkimizda">Hakkımızda</string>
    <string name="MainActivity_Tavsiye">Tavsiye</string>
    <string name="MainActivity_Sefin_spesyali">Şefin Spesyali</string>
    <string name="MainActivity_Menu">Menu</string>
    <string name="Menu_Sefin_Spesyali">Şefin Spesyaline Göz Attınız Mı?</string>
    <string name="Rezervasyon2_Name">Adınız</string>
    <string name="Rezervasyon2_Update">Güncelle</string>
    <string name="Rezervasyon2_Delete">Sil</string>
    <string name="Rezervasyon2_Save">Kaydet</string>
    <string name="Rezervasyon2_Date">Tarih Girin (GG/AA/YYYY)</string>
    <string name="Hakkimizda_Adres">Telefon Numaramız: +90 (012) 345 67 89 \\n\\n Navigation Drawer için ekranın solundan sağa kaydırın.</string>
    <string name="Sefin_Spesyali_Title_1">Şefin Spesyali 1</string>
    <string name="Sefin_Spesyali_Body_1">Şefimizin dinlendirilmiş etlerimizden hazırladığı spesiyal kıyma sosumuz lezzeti ve pratikliği ile buzdolabınızın olmazsa olmazlarından olacak. Bolonez soslu makarna, naçoz, taco hatta kıymalı yumurta.. Aklınıza gelen bir çok tarifi hızlıca ve kolayca yapabilirsiniz.</string>
    <string name="Sefin_Spesyali_Body2_1">İçindekiler: Dana kıyma, Kırmızı soğan, Domates püresi, Domates salçası, Kimyon, Kekik, Karabiber, Tuz</string>
    <string name="Sefin_Spesyali_Detail_1">Özel peynir tabağı ve kırmızı şarap ile servis edilir.</string>
    <string name="Sefin_Spesyali_Title_2">Şefin Spesyali 2</string>
    <string name="Sefin_Spesyali_Body_2">Fesleğen pesto ile lezzetlendirilen “Patlıcan ve domates ‘caponatalı’ karides ve kalamar salatası”, yemeğe keyifli bir başlangıç yapmanızı sağlıyor. Hemen ardından parmesanlı foccacia kruton ile servis edilen “Pırasa ve balkabağı çorbası” içinizi ısıtıyor. “Ricottalı ve porçini mantarlı ‘Plin’ tarzı ravioli” ise menüde ön plana lezzetlerden.</string>
    <string name="Sefin_Spesyali_Body2_2">İçindekiler: Dana kıyma, Kırmızı soğan, Domates püresi, Domates salçası, Kimyon, Kekik, Karabiber, Tuz</string>
    <string name="Sefin_Spesyali_Detail_2">Özel peynir tabağı ve kırmızı şarap ile servis edilir.</string>
    <string name="Sefin_Spesyali_Title_3">Şefin Spesyali 3</string>
    <string name="Sefin_Spesyali_Body_3">Kıvırcık kuzularımızın en değerli bölümlerinden olan T-Bone, iki farklı eti bir arada bulundurur. Bir tarafı kuzu küşleme, diğer tarafi ise kuzu kaskidir. Aroması ve yumuşaklığı ile muhteşem bir lezzet. Izgarada ideal pişme derecesi orta ve orta-iyidir. Suni yem olmadan sadece otlayan kıvırcık kuzularımız ,aromatik otlarla beslendikleri ve doğada serbest gezdikleri için hem vücutları yağ bağlamaz hem de etleri pespembedir.</string>
    <string name="Sefin_Spesyali_Detail_3">Özel peynir tabağı ve kırmızı şarap ile servis edilir.</string>
    <string name="NavHeader_Definition">Bambaşka bir lezzet</string>
    <string name="NavHeader_Title">Restora</string>
    <string name="Add_Profile">Rezervasyon Ekle</string>
    <string name="Drawer_Phone">Telefon: +90 (012) 345 67 89</string>
    <string name="Drawer_Social">Sosyal Medya\'da biz: @restora</string>
    <string name="Sefin_Spesyali_Tabbed_Snackbar">Şefin sizler için seçtiği enfes tariflerdir!</string>
    <string name="hakkimizda">Hakkımızda</string>
    <string name="chefs_special">Şefin Spesyali</string>
    <string name="Rezervasyon_Title">Rezervasyon</string>
    <string name="menu_et">Kırmızı Et</string>
    <string name="menu_bira">Bira</string>
    <string name="menu_salata">Salatalar</string>
    <string name="menu_balik">Balık</string>
    <string name="menu_kokteyl">Kokteyl</string>
    <string name="menu_sarap">Şarap</string>
    <string name="Hakkimizda_bilgi">Hakkımızda Bilgi</string>
    <string name="Hakkimizda_Bilgi2">Restora, 2020 yılında kurulmuş bir işletmedir. En lezzetli yemek mottosuyla çıktığımız bu yolda.... Çalışan sayımızı öğrenmek için tıklayın.</string>
    <string name="Hakkimizda_Text2">36 tam zamanlı çalışanımız ve 12 yarı zamanlı çalışanımızla kocaman bir aileyiz.</string>
</resources>
